// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Info component it should show frontend and backend info successfully: version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
  id="backend"
>
  <fieldset
    class="MuiBox-root css-qxh7fn"
  >
    <legend>
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        id="37d307ae-4f1e-4d8d-bafe-fd642f8af4dc-backend"
      >
        Backend
      </label>
    </legend>
    <ul
      class="MuiList-root MuiList-padding MuiList-dense css-h4y409-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Date: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            fooBackend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Branch: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            barBackend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Build Number: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            bazBackend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          GIT SHA:
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            gooBackend
          </span>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;

exports[`Testing Info component it should show frontend and backend info successfully: version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
  id="frontend"
>
  <fieldset
    class="MuiBox-root css-qxh7fn"
  >
    <legend>
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        id="37d307ae-4f1e-4d8d-bafe-fd642f8af4dc-frontend"
      >
        Frontend
      </label>
    </legend>
    <ul
      class="MuiList-root MuiList-padding MuiList-dense css-h4y409-MuiList-root"
    >
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Date: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            fooFrontend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Branch: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            barFrontend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          Build Number: 
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            bazFrontend
          </span>
        </div>
      </li>
      <li
        class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-u4tvz2-MuiFormLabel-root"
        >
          GIT SHA:
        </label>
        <div
          class="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-et1ao3-MuiTypography-root"
          >
            gooFrontend
          </span>
        </div>
      </li>
    </ul>
  </fieldset>
</div>
`;
